added edit product view and logic

--- a/ASPCORE_RML_XCast_Store/Views/AdminProducts/CreateProduct.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/AdminProducts/CreateProduct.cshtml
@@ -24,7 +24,7 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="col-sm-6 col-md-6">
                                 <div class="form-group">
                                     <label asp-for="Name" class="form-label">Название товара<span class="text-red">*</span></label>
