user management wip

--- a/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
@@ -272,12 +272,12 @@
                                 <h3>Управление пользователями</h3>
                             </li>
                             <li class="slide">
-                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Users" asp-controller="AdminUsers">
+                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Users" asp-controller="Users">
                                     <i class="side-menu__icon fe fe-users"></i><span class="side-menu__label">Пользователи</span>
                                 </a>
                             </li>
                             <li class="slide">
-                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Roles" asp-controller="AdminUsers">
+                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Roles" asp-controller="Roles">
                                     <i class="side-menu__icon fe fe-book-open"></i><span class="side-menu__label">Роли</span>
                                 </a>
                             </li>
