product categories wip

--- a/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
@@ -301,7 +301,7 @@
                                 <h3>Управление категориями товаров</h3>
                             </li>
                             <li class="slide">
-                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Categories" asp-controller="AdminProductCategory">
+                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Categories" asp-controller="ProductCategory">
                                     <i class="side-menu__icon fe fe-clipboard"></i><span class="side-menu__label">Категории товаров</span>
                                 </a>
                             </li>
