--- a/ASPCORE_RML_XCast_Store/Views/Users/Users.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Users/Users.cshtml
@@ -40,7 +40,7 @@
                                                         <th>Количество всех заказов</th>
                                                         <th>Роли</th>
                                                         <th>Дата регистрации</th>
-                                                        <th name="bstable-actions">Actions</th></tr>
+                                                        <th name="bstable-actions">Функции</th></tr>
                                                 </thead>
                                                 <tbody>
 
