--- a/ASPCORE_RML_XCast_Store/Views/ProductCategory/Categories.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/ProductCategory/Categories.cshtml
@@ -1,16 +1,12 @@
 ﻿@using PagedList.Core.Mvc;
-@using RMLXCast.Web.ViewModels.Product;
-@model ProductsPagedViewModel
+@model PagedProductCategoriesViewModel
 
 @{
-    ViewBag.Title = "X-Cast Управление товарами";
-
+    ViewBag.Title = "X-Cast Управление категориями";
     var pagedListOptions = PagedListRenderOptions.Bootstrap4PageNumbersPlusPrevAndNext;
     pagedListOptions.LinkToNextPageFormat = "Следующая";
     pagedListOptions.LinkToPreviousPageFormat = "Предыдущая";
-
 }
-
 
 <!--app-content open-->
 <div class="main-content app-content mt-0">
@@ -19,7 +15,7 @@
         <div class="main-container container-fluid">
             <!-- PAGE-HEADER -->
             <div class="page-header">
-                <h1 class="page-title">Панель управления товарами</h1>
+                <h1 class="page-title">Панель управления категориями товаров</h1>
             </div>
             <!-- PAGE-HEADER END -->
             <!--MAIN CONTENT START-->
@@ -27,67 +23,46 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">Все товары</h3>
+                        <h3 class="card-title">Категории товаров</h3>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-bordered border text-nowrap mb-0" id="rml-datatable-products">
                                 <thead>
                                     <tr>
-                                        <th>Название товара</th>
-                                        <th>Краткое описание</th>
-                                        <th>Цена</th>
-                                        <th>Количество</th>
-                                        <th>Товар опупликован?</th>
+                                        <th>Имя</th>
+                                        <th>Описание</th>
                                         <th name="bstable-actions">Функции</th>
                                     </tr>
                                 </thead>
                                 <tbody>
 
-                                    @foreach (var product in Model.ViewProductViewModels)
+                                    @foreach (var productCategory in Model.PagedProductCategoryViewModels)
                                     {
                                         <tr>
-                                            <td>@product.Name</td>
-                                            <td>@product.ShortDescription</td>
-                                            <td>@product.Price.ToString("N0")</td>
-                                            <td>@product.Stock</td>
-                                            <td>@(product.Published ? "Опубликован" : "Не опубликован")</td>
+                                            <td>@productCategory.Name</td>
+                                            <td>@productCategory.Description</td>
 
                                             <td name="bstable-actions">
-                                                <form method="post" asp-action="DeleteProduct" asp-controller="AdminProducts">
-                                                    <input hidden name="id" value="@product.Id" />
+                                                <form method="post" asp-action="Delete" asp-controller="ProductCategory">
+                                                    <input hidden name="id" value="@productCategory.Id" />
                                                     <input hidden name="page" value="@Model.PageNumber" />
                                                     <div class="g-2">
-                                                        <a class="btn text-primary btn-sm" data-bs-toggle="tooltip" data-bs-original-title="Редактировать" asp-action="EditProduct" asp-controller="AdminProducts" asp-route-id="@product.Id"><span class="fe fe-edit fs-14"></span></a>
+                                                        <a class="btn text-primary btn-sm" data-bs-toggle="tooltip" data-bs-original-title="Редактировать" asp-action="Edit" asp-controller="ProductCategory" asp-route-id="@productCategory.Id"><span class="fe fe-edit fs-14"></span></a>
                                                         <button type="submit" class="btn text-danger btn-sm" data-bs-toggle="tooltip" data-bs-original-title="Удалить"><span class="fe fe-trash-2 fs-14"></span></button>
                                                     </div>
                                                 </form>
-
-                                                @*<div class="btn-list">
-                                            <a class="btn btn-sm btn-primary" asp-action="EditProduct" asp-controller="AdminProducts" asp-route-id="@product.Id"><span class="fe fe-edit"> </span></a>
-                                            <button form="deleteForm" class="btn btn-sm btn-danger" type="submit"><span class="fe fe-trash-2"> </span></button>
-                                            </div>*@
                                             </td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
-                        <a class="btn btn-primary" asp-action="CreateProduct" asp-controller="AdminProducts"> Добавить товар</a>
                     </div>
                 </div>
 
-                <pager class="pager-container" list="@Model.ViewProductViewModels" options="@pagedListOptions" asp-action="Products" asp-controller="AdminProducts" />
+                <pager class="pager-container" list="@Model.PagedProductCategoryViewModels" options="@pagedListOptions" asp-action="Categories" asp-controller="ProductCategory" />
             </div>
-
-            @*@foreach (var viewProduct in Model.ViewProductViewModels)
-            {
-            <p>
-            @viewProduct.Name - @viewProduct.ShortDescription - @viewProduct.Price
-            </p>
-            }*@
-
-
             <!--MAIN CONTENT END-->
 
         </div>
@@ -114,3 +89,5 @@
     <script charset="windows-1251" src="~/sash/js/table-data.js"></script>
 
             }
+
+
