--- a/ASPCORE_RML_XCast_Store/Views/Shop/Products.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Products.cshtml
@@ -658,23 +658,10 @@
             </div>
             <div class="col-lg-3">
                 <div class="shop-sidebar-style mt-25">
-                    <div class="sidebar-widget mb-65">
-                        <h4 class="pro-sidebar-title">Categories </h4>
-                        <div class="sidebar-widget-list mt-50">
-                            <ul>
-                                <li><a href="#">Electronics & Tech</a> <span>(16)</span></li>
-                                <li><a href="#">Electronics sale</a> <span>(13)</span></li>
-                                <li><a href="#">Electronics sale off</a> <span>(39)</span></li>
-                                <li><a href="#">Fashion sale off</a> <span>(16)</span></li>
-                                <li><a href="#">Fashions</a> <span>(15)</span></li>
-                                <li><a href="#">Furnitur new arrival</a> <span>(18)</span></li>
-                                <li><a href="#">Furniture</a> <span>(10)</span></li>
-                                <li><a href="#">Main</a> <span>(19)</span></li>
-                                <li><a href="#">Shoes</a> <span>(12)</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="sidebar-widget mb-70">
+
+                    @await Component.InvokeAsync("ProductCategories")
+
+                    @*<div class="sidebar-widget mb-70">
                         <h4 class="pro-sidebar-title">Filter by price </h4>
                         <div class="price-filter mt-60">
                             <div id="slider-range"></div>
@@ -685,63 +672,8 @@
                                 <button type="button">Filter</button>
                             </div>
                         </div>
-                    </div>
-                    <div class="sidebar-widget mb-60">
-                        <h4 class="pro-sidebar-title">Size</h4>
-                        <div class="sidebar-widget-size mt-45">
-                            <ul>
-                                <li><a href="#">Full Size</a></li>
-                                <li><a href="#">L</a></li>
-                                <li><a href="#">M</a></li>
-                                <li><a href="#">S</a></li>
-                                <li><a href="#">XL</a></li>
-                                <li><a href="#">XXL</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="sidebar-widget mb-45">
-                        <h4 class="pro-sidebar-title">Color</h4>
-                        <div class="sidebar-widget-color mt-40">
-                            <ul>
-                                <li><a href="#">Blue <span>(8)</span></a></li>
-                                <li><a href="#">Brown <span>(8)</span></a></li>
-                                <li><a href="#">Green <span>(7)</span></a></li>
-                                <li><a href="#">Pink <span>(7)</span></a></li>
-                                <li><a href="#">Violet <span>(8)</span></a></li>
-                                <li><a href="#">White <span>(8)</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="sidebar-widget mb-60">
-                        <h4 class="pro-sidebar-title">Tags</h4>
-                        <div class="sidebar-widget-tag mt-45">
-                            <ul>
-                                <li><a href="#">Blazer,</a></li>
-                                <li><a href="#">chair,</a></li>
-                                <li><a href="#">Coat,</a></li>
-                                <li><a href="#">dress,</a></li>
-                                <li><a href="#">Electronics & Tech,</a></li>
-                                <li><a href="#">fashion,</a></li>
-                                <li><a href="#">light,</a></li>
-                                <li><a href="#">Living,</a></li>
-                                <li><a href="#">Main 01,</a></li>
-                                <li><a href="#">Main 02,</a></li>
-                                <li><a href="#">Main 02-1,</a></li>
-                                <li><a href="#">Main 03,</a></li>
-                                <li><a href="#">Sandals,</a></li>
-                                <li><a href="#">Tuxedo</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="sidebar-widget">
-                        <div class="shop-sidebar-banner default-overlay">
-                            <a href="#"><img alt="" src="~/toro/images/banner/sidebar-banner.jpg"></a>
-                            <div class="shop-sidebar-content">
-                                <h5>Houndstooth coat</h5>
-                                <h3>off 25%</h3>
-                            </div>
-                        </div>
-                    </div>
+                    </div>*@
+
                 </div>
             </div>
         </div>
