--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/ProductCategories/ProductCategories.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/ProductCategories/ProductCategories.cshtml
@@ -1,16 +1,14 @@
-﻿<div class="sidebar-widget mb-65">
-    <h4 class="pro-sidebar-title">Categories </h4>
+﻿@using RMLXCast.Web.ViewModels.ShopProduct;
+@model IList<ShopProductCategoryViewModel>
+
+<div class="sidebar-widget mb-65">
+    <h4 class="pro-sidebar-title">Категории</h4>
     <div class="sidebar-widget-list mt-50">
         <ul>
-            <li><a href="#">Electronics & Tech</a> <span>(16)</span></li>
-            <li><a href="#">Electronics sale</a> <span>(13)</span></li>
-            <li><a href="#">Electronics sale off</a> <span>(39)</span></li>
-            <li><a href="#">Fashion sale off</a> <span>(16)</span></li>
-            <li><a href="#">Fashions</a> <span>(15)</span></li>
-            <li><a href="#">Furnitur new arrival</a> <span>(18)</span></li>
-            <li><a href="#">Furniture</a> <span>(10)</span></li>
-            <li><a href="#">Main</a> <span>(19)</span></li>
-            <li><a href="#">Shoes</a> <span>(12)</span></li>
+            @foreach (var category in Model)
+            {
+                <li><a asp-action="Products" asp-controller="Shop" asp-route-categoryId="@category.Id">@category.Name</a></li>
+            }
         </ul>
     </div>
 </div>
