--- a/ASPCORE_RML_XCast_Store/wwwroot/toro/css/style.css
+++ b/ASPCORE_RML_XCast_Store/wwwroot/toro/css/style.css
@@ -20250,7 +20250,7 @@ body.body-menu-overlay::before {
 }
 
 .error-area {
-  height: 100vh;
+  /*height: 25vh;*/
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -20260,6 +20260,7 @@ body.body-menu-overlay::before {
   display: -ms-flexbox;
   display: flex;
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
