wip on header and products views

--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
@@ -4,16 +4,15 @@
             <div class="row">
                 <div class="footer-column footer-width-24">
                     <div class="footer-widget footer-about mb-30">
-                        <a href="index.html">
-                            <img src="assets/images/logo/logo.png" alt="logo">
+                        <a asp-action="Products" asp-controller="Shop">
+                            <img src="assets/images/logo/logo.png" alt="X-Cast">
                         </a>
-                        <p>Lorem ipsum dolor sit amet, magna habemus ius ad, qui minimum voluptar</p>
-                        <div class="social-icon-style-2 social-icon-hm4">
+                        <p>Оффициальный магазин</p>
+                        @*<div class="social-icon-style-2 social-icon-hm4">
                             <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
                             <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
                             <a class="youtube" href="#"><i class="fa fa-youtube"></i></a>
-                            <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
                 <div class="footer-column footer-width-12">
