--- a/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "X-Cast Панель Управления";
+    ViewBag.Title = ViewBag.Title ?? "X-Cast Панель Управления";
 }
 
 <!DOCTYPE html>
@@ -13,13 +13,13 @@
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sash – Bootstrap 5  Admin & Dashboard Template">
-    <meta name="author" content="Spruko Technologies Private Limited">
+    <meta name="description" content="X-Cast">
+    <meta name="author" content="X-Cast">
     <meta name="keywords"
-          content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
+          content="X-Cast, 3d, Printing, Production, Protostudio, Proto, 3dxcast.">
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" type="image/x-icon" href="~/sash/images/brand/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/sash/images/brand/favicon.ico"/>
 
     <!-- TITLE -->
     <title>@ViewBag.Title </title>
