--- a/ASPCORE_RML_XCast_Store/Views/Shop/Products.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Products.cshtml
@@ -37,7 +37,7 @@
                            @* <div class="shop-filter ml-50">
                                 <a class="shop-filter-active" href="#">Filters <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></a>
                             </div>*@
-                            <div class="shop-short-by ml-50">
+                            @*<div class="shop-short-by ml-50">
                                 <span>Sort by <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></span>
                                 <ul>
                                     <li class="active"><a href="#">Default sorting</a></li>
@@ -47,7 +47,7 @@
                                     <li><a href="#">Sort by price: low to high</a></li>
                                     <li><a href="#">Sort by price: high to low</a></li>
                                 </ul>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                     <!-- MAIN PRODUCTS CONTENT START-->
@@ -72,7 +72,7 @@
                                             </div>*@
                                             </div>
                                             <div class="product-content-2 title-font-width-400 text-center">
-                                                <h3><a href="product-details.html">@product.Name</a></h3>
+                                                <h3><a asp-action="ProductDetail" asp-controller="Shop" asp-route-productId="@product.Id">@product.Name</a></h3>
                                                 <div class="product-price">
                                                     <span class="new-price">@product.PriceFormated ₽</span>
                                                 </div>
