--- a/ASPCORE_RML_XCast_Store/Views/Shared/_ShopLayout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/_ShopLayout.cshtml
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="~/toro/css/plugins/fullpage.css">
     <link rel="stylesheet" href="~/toro/css/plugins/jquery-ui.css">
     <link rel="stylesheet" href="~/toro/css/plugins/select2.min.css">
-    <link rel="stylesheet" href="~/toro/css/style.css">
+    <link rel="stylesheet" href="~/toro/css/style.css" asp-append-version="true">
 </head>
 <body>
 
