--- a/ASPCORE_RML_XCast_Store/wwwroot/toro/css/style.css
+++ b/ASPCORE_RML_XCast_Store/wwwroot/toro/css/style.css
@@ -13935,11 +13935,14 @@ body.body-menu-overlay::before {
   position: relative;
   overflow: hidden;
   z-index: 2;
+  height: 450px;
 }
 
-.product-wrap .product-img > a img {
-  width: 100%;
-}
+    .product-wrap .product-img > a img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 
 .product-wrap .product-img > a img.hover-img {
   position: absolute;
