added search, ui changes on footer

--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
@@ -17,35 +17,32 @@
                 </div>
                 <div class="footer-column footer-width-12">
                     <div class="footer-widget footer-info-list-2 mb-30">
-                        <h3 class="footer-title">Company Link</h3>
+                        <h3 class="footer-title">Наши другие продукты</h3>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Help Center</a></li>
-                            <li><a href="#">Our Team</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">The Blog</a></li>
+                            <li><a href="https://3dxcast.com/">Лендинг</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="footer-column footer-width-14">
                     <div class="footer-widget footer-info-list-2 mb-30">
-                        <h3 class="footer-title">Userful Link</h3>
+                        <h3 class="footer-title">Полезные ссылки</h3>
                         <ul>
-                            <li><a href="#">Guides & Articles</a></li>
-                            <li><a href="#">Customer Reviews</a></li>
-                            <li><a href="#">Coupon Codes</a></li>
-                            <li><a href="#">Military Discount</a></li>
+                            <li><a href="https://3dxcast.com/">О нас</a></li>
+                            <li><a href="https://vk.com/protofactory">Protofactory</a></li>
+                            <li><a href="https://vk.com/3dxcast">Ортезирование</a></li>
+                            <li><a href="https://www.instagram.com/3dxcast/">Мы в инстаграмме</a></li>
+                            <li><a href="#">Политика конфиденциальности</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="footer-column footer-width-19">
                     <div class="footer-widget footer-info-list-2 footer-contect mb-30">
-                        <h3 class="footer-title">Contact info</h3>
+                        <h3 class="footer-title">Контактная информация</h3>
                         <ul>
-                            <li><i class="dlicon ui-2_time-clock"></i> Monday - Friday: 9:00 - 19:00</li>
+                            <li><i class="dlicon ui-2_time-clock"></i> Понедельник - Пятница: 9:00 - 20:00 по МСК</li>
                             <li><i class="dlicon ui-1_email-83"></i> info@example.com</li>
-                            <li><i class="dlicon tech-2_rotate"></i> (+612) 2531 5600</li>
-                            <li><i class="dlicon ui-1_home-simple"></i> PO Box 1622 Colins Street West Victoria 8077 Australia</li>
+                            <li><i class="dlicon tech-2_rotate"></i> +7 (911) 920-21-31 </li>
+                            <li><i class="dlicon ui-1_home-simple"></i> Колпино, улица Веры Слуцкой, 89 </li>
                         </ul>
                     </div>
                 </div>
@@ -60,7 +57,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="copyright-2 text-center">
-                        <p>© 2021 <a href="https://hasthemes.com/">Toro.</a> All rights reserved.</p>
+                        <p>© @DateTime.Now.Year <a href="https://3dxcast.com/">X-Cast.</a> Все права защищены.</p>
                     </div>
                 </div>
             </div>
