--- a/ASPCORE_RML_XCast_Store/Views/Shared/_ShopLayout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/_ShopLayout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using RMLXCast.Web.ViewModels.ShopProduct;
+
 @{
     ViewBag.PageHeaderLabel = ViewBag.PageHeaderLabel ?? "";
 }
@@ -169,9 +170,9 @@
     <script>
         function init() {
             var mapOptions = {
-                zoom: 11,
+                zoom: 16,
                 scrollwheel: false,
-                center: new google.maps.LatLng(40.709896, -73.995481),
+                center: new google.maps.LatLng(59.733421629765004, 30.576771931493184),
                 styles: [{
                     "featureType": "water",
                     "elementType": "geometry",
@@ -336,11 +337,11 @@
             var mapElement = document.getElementById('contact-map');
             var map = new google.maps.Map(mapElement, mapOptions);
             var marker = new google.maps.Marker({
-                position: new google.maps.LatLng(40.709896, -73.995481),
+                position: new google.maps.LatLng(59.733421629765004, 30.576771931493184),
                 map: map,
-                icon: '~/toro/images/icon-img/2.png',
+                icon: '/toro/images/icon-img/2.png',
                 animation: google.maps.Animation.BOUNCE,
-                title: 'Snazzy!'
+                title: 'X-Cast!'
             });
         }
         google.maps.event.addDomListener(window, 'load', init);
