added product detail view

--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="footer-column footer-width-12">
                     <div class="footer-widget footer-info-list-2 mb-30">
-                        <h3 class="footer-title">Наши другие продукты</h3>
+                        <h3 class="footer-title">Компания</h3>
                         <ul>
                             <li><a href="https://3dxcast.com/">Лендинг</a></li>
                         </ul>
@@ -40,7 +40,7 @@
                         <h3 class="footer-title">Контактная информация</h3>
                         <ul>
                             <li><i class="dlicon ui-2_time-clock"></i> Понедельник - Пятница: 9:00 - 20:00 по МСК</li>
-                            <li><i class="dlicon ui-1_email-83"></i> info@example.com</li>
+                            <li><a href="mailto:protostudiosru@gmail.com"><i class="dlicon ui-1_email-83"></i> protostudiosru@gmail.com</a></li>
                             <li><i class="dlicon tech-2_rotate"></i> +7 (911) 920-21-31 </li>
                             <li><i class="dlicon ui-1_home-simple"></i> Колпино, улица Веры Слуцкой, 89 </li>
                         </ul>
