--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
@@ -30,8 +30,8 @@
 <form method="post" asp-action="Logout" asp-controller="Account" id="LogoutForm">
 </form>
 
-<header class="header-area transparent-bar section-padding-1">
-            <div class="container-fluid">
+<header class="header-area section-padding-1">
+    <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-2">
                         @*<div class="logo logo-width">
