--- a/ASPCORE_RML_XCast_Store/Views/Shop/Products.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Products.cshtml
@@ -122,7 +122,7 @@
                                             <div class="shop-list-content ml-20">
                                                 <h3><a asp-action="ProductDetail" asp-controller="Shop" asp-route-productId="@product.Id">@product.Name</a></h3>
                                                 <div class="pro-list-price">
-                                                    <span>@product.PriceFormated ₽</span>
+                                                    <span>@product.PriceFormated</span>
                                                 </div>
                                                 <p>@product.ShortDescription</p>
                                                 <div class="product-list-action">
