--- a/ASPCORE_RML_XCast_Store/Views/Account/Register.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Account/Register.cshtml
@@ -45,7 +45,7 @@
                                 <input asp-for="PasswordConfirm" />
                                 <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
                             </div>
-                            <p style="margin-right: 45%">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="#">privacy policy</a></p>
+                            <p style="margin-right: 45%"> Регистрируясь на нашем сайтe вы автоматически соглашаетесь c нашей <a href="#">политикой конфидициальности</a></p>
                             <div class="login-register-btn">
                                 <button type="submit">Регистрация</button>
                             </div>
