--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/SidebarCart/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/SidebarCart/Default.cshtml
@@ -34,8 +34,8 @@
                         <h4>Subtotal: <span>$170.00</span></h4>
                     </div>
                     <div class="cart-checkout-btn">
-                        <a class="btn-hover cart-btn-style" href="cart.html">view cart</a>
-                        <a class="no-mrg btn-hover cart-btn-style" href="checkout.html">checkout</a>
+                        <a class="btn-hover cart-btn-style" asp-action="Cart" asp-controller="Shop">Корзина</a>
+                        <a class="no-mrg btn-hover cart-btn-style" asp-action="Checkout" asp-controller="Shop">Оформить заказ</a>
                     </div>
                 </div>
             </div>
