--- a/ASPCORE_RML_XCast_Store/Views/Shop/Cart.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Cart.cshtml
@@ -2,19 +2,33 @@
     ViewBag.Title = $"Корзина";
 }
 
-<div class="breadcrumb-area border-top-3 section-padding-1 breadcrumb-ptb-3">
+<div class="breadcrumb-area section-padding-1 bg-gray breadcrumb-ptb-1">
+    <div class="container-fluid">
+        <div class="breadcrumb-content text-center">
+            <div class="breadcrumb-title">
+                <h2>Корзина товаров</h2>
+            </div>
+            <ul>
+                <li>
+                    <a asp-action="Products" asp-controller="Shop">Главная </a>
+                </li>
+                <li><span> &gt; </span></li>
+                <li class="active"> Корзина </li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <!-- cart start -->
 <div class="cart-main-area pt-90 pb-100" id="app">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12" v-if="haveAnyProducts">
                 <form action="#">
                     <div class="row">
                         <div class="col-lg-8">
                             <div class="table-content table-responsive cart-table-content">
-                                <table>
+                                <table v-if="haveAnyProducts">
                                     <thead>
                                         <tr>
                                             <th></th>
@@ -26,72 +40,119 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr v-for="(cartProduct, index) in cartProducts">
                                             <td class="product-remove">
-                                                <a href="#"><i class="dlicon ui-1_simple-remove"></i></a>
+                                                <a href="#" @@click="deleteProductFromCart(cartProduct, index)"><i class="dlicon ui-1_simple-remove"></i></a>
                                             </td>
                                             <td class="product-img">
-                                                <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                                @*  <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>*@
                                             </td>
-                                            <td class="product-name"><a href="#">High Collar Jacket</a></td>
-                                            <td class="product-price"><span class="amount">$26.00</span></td>
+                                            <td class="product-name"><a href="#">{{cartProduct.productName}}</a></td>
+                                            <td class="product-price"><span class="amount">{{formatPrice(cartProduct)}}</span></td>
                                             <td class="cart-quality">
                                                 <div class="product-details-quality quality-width-cart">
                                                     <div class="cart-plus-minus">
-                                                        <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
+                                                        <div class="dec qtybutton" @@click="decreaseAmountClick(cartProduct)">-</div>
+                                                        <input readonly class="cart-plus-minus-box" type="text" name="qtybutton" v-model="cartProduct.amount">
+                                                        <div class="inc qtybutton" @@click="increaseAmountClick(cartProduct)">+</div>
                                                     </div>
                                                 </div>
+                                                @*<div class="product-details-quality quality-width-cart">
+                                                <div class="cart-plus-minus">
+                                                <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
+                                                </div>
+                                                </div>*@
                                             </td>
-                                            <td class="product-total"><span>$110.00</span></td>
+                                            <td class="product-total"><span>{{totalPrice(cartProduct)}}</span></td>
+                                        </tr>
+                                        @*   <tr>
+                                        <td class="product-remove">
+                                        <a href="#"><i class="dlicon ui-1_simple-remove"></i></a>
+                                        </td>
+                                        <td class="product-img">
+                                        <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                        </td>
+                                        <td class="product-name"><a href="#">High Collar Jacket</a></td>
+                                        <td class="product-price"><span class="amount">$26.00</span></td>
+                                        <td class="cart-quality">
+                                        <div class="product-details-quality quality-width-cart">
+                                        <div class="cart-plus-minus">
+                                        <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
+                                        </div>
+                                        </div>
+                                        </td>
+                                        <td class="product-total"><span>$110.00</span></td>
                                         </tr>
                                         <tr>
-                                            <td class="product-remove">
-                                                <a href="#"><i class="dlicon ui-1_simple-remove"></i></a>
-                                            </td>
-                                            <td class="product-img">
-                                                <a href="#"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
-                                            </td>
-                                            <td class="product-name"><a href="#">High Collar Jacket</a></td>
-                                            <td class="product-price"><span class="amount">$26.00</span></td>
-                                            <td class="cart-quality">
-                                                <div class="product-details-quality quality-width-cart">
-                                                    <div class="cart-plus-minus">
-                                                        <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td class="product-total"><span>$110.00</span></td>
-                                        </tr>
+                                        <td class="product-remove">
+                                        <a href="#"><i class="dlicon ui-1_simple-remove"></i></a>
+                                        </td>
+                                        <td class="product-img">
+                                        <a href="#"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
+                                        </td>
+                                        <td class="product-name"><a href="#">High Collar Jacket</a></td>
+                                        <td class="product-price"><span class="amount">$26.00</span></td>
+                                        <td class="cart-quality">
+                                        <div class="product-details-quality quality-width-cart">
+                                        <div class="cart-plus-minus">
+                                        <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
+                                        </div>
+                                        </div>
+                                        </td>
+                                        <td class="product-total"><span>$110.00</span></td>
+                                        </tr>*@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="cart-shiping-update-wrapper">
-                                <div class="discount-code">
-                                    <input type="text" required="" name="name" placeholder="Код купона">
-                                    <button class="coupon-btn" type="submit">Применить купон</button>
-                                </div>
-                                <div class="cart-clear">
-                                    <a href="#">Очистить корзину</a>
-                                    <a href="#">Обновить корзину</a>
-                                </div>
+                            @* <div class="cart-shiping-update-wrapper">
+                            <div class="discount-code">
+                            <input type="text" required="" name="name" placeholder="Код купона">
+                            <button class="coupon-btn" type="submit">Применить купон</button>
                             </div>
+                            <div class="cart-clear">
+                            <a href="#">Очистить корзину</a>
+                            <a href="#">Обновить корзину</a>
+                            </div>
+                            </div>*@
                         </div>
                         <div class="col-lg-4">
                             <div class="grand-total-wrap">
-                                <h4>Cart totals</h4>
+                                <h4>Корзина</h4>
                                 <div class="grand-total-content">
                                     <ul>
-                                        <li>Начальная цена <span> 2333 Р </span></li>
-                                        <li>Итоговая цена <span> 3600 Р</span> </li>
+                                        <li>Начальная цена <span> {{startPriceComputed}} </span></li>
+                                        <li>Итоговая цена <span> {{endPriceComputed}}</span> </li>
                                     </ul>
                                 </div>
                                 <div class="grand-btn">
-                                    <a asp-action="Checkout" asp-asp-controller="Shop">Перейти к оформлению</a>
+                                    <a @@click="handleCheckoutClick">Перейти к оформлению</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </form>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12" v-else>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="error-content text-center">
+                                <h3>Ваша корзина пуста!</h3>
+                                <p>Самое время перейти к покупкам.</p>
+                                <div class="btn-style-1 text-center">
+                                    <a class="btn-border-black2" asp-action="Products" asp-asp-controller="Shop">
+                                        <div class="btn-viewmore-normal btn-ptb-3 btn-viewmore-bg-transparent btn-viewmore-common btn-font-3">
+                                            <span>В магазин</span>
+                                        </div>
+                                        <div class="btn-viewmore-hover btn-ptb-3 btn-viewmore-common btn-hover-transition btn-font-3">
+                                            <span>В магазин</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
