--- a/ASPCORE_RML_XCast_Store/Views/Shop/Checkout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Checkout.cshtml
@@ -11,9 +11,9 @@
         return string.Format("{0:G0} ₽", price);
     }
 
-    decimal CalculateFinalPrice(IEnumerable<CheckoutViewProductViewModel> products )
+    decimal CalculateFinalPrice(IEnumerable<CheckoutViewProductViewModel>? products )
     {
-        return products.Sum(x => x.PricePerSlot * x.Amount);
+        return products == null ? 0m : products.Sum(x => x.PricePerSlot * x.Amount);
     }
 }
 
@@ -77,6 +77,7 @@
                                 </div>*@
                                 <div class="col-lg-12">
                                     <div class="billing-info mb-25">
+                                        <input hidden readonly asp-for="ShippmentAddress.Id">
                                         <label asp-for="ShippmentAddress.Country">Страна <abbr class="required" title="required">*</abbr></label>
                                         <input asp-for="ShippmentAddress.Country" type="text">
                                         <span asp-validation-for="ShippmentAddress.Country" class="text-danger"></span>
