sidebar cart wip

--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Footer/Default.cshtml
@@ -39,10 +39,10 @@
                     <div class="footer-widget footer-info-list-2 footer-contect mb-30">
                         <h3 class="footer-title">Контактная информация</h3>
                         <ul>
-                            <li><i class="dlicon ui-2_time-clock"></i> Понедельник - Пятница: 9:00 - 20:00 по МСК</li>
+                            <li><i class="dlicon ui-2_time-clock"></i> Ежедневно: 10:00 - 22:00 по МСК</li>
                             <li><a href="mailto:protostudiosru@gmail.com"><i class="dlicon ui-1_email-83"></i> protostudiosru@gmail.com</a></li>
                             <li><i class="dlicon tech-2_rotate"></i> +7 (911) 920-21-31 </li>
-                            <li><i class="dlicon ui-1_home-simple"></i> Колпино, улица Веры Слуцкой, 89 </li>
+                            <li><i class="dlicon ui-1_home-simple"></i> Санкт-Петербург, Колпино<br /> улица Веры Слуцкой, 89 </li>
                         </ul>
                     </div>
                 </div>
