--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
@@ -63,7 +63,10 @@
                                     {
                                         <li><a asp-action="Dashboard" asp-controller="Admin">Панель админа</a></li>
                                     }
-                                </ul>
+
+                            <li><a asp-action="Register" asp-controller="Account">Примеры работ и отзывы</a></li>
+                            <li><a asp-action="Register" asp-controller="Account">Контактные данные</a></li>
+                        </ul>
                             </nav>
                         </div>
                     </div>
