--- a/ASPCORE_RML_XCast_Store/Views/Shop/Cart.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Cart.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 <!-- cart start -->
-<div class="cart-main-area pt-90 pb-100" id="app">
+<div class="cart-main-area pt-90 pb-100" id="cart">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12" v-if="haveAnyProducts">
