--- a/ASPCORE_RML_XCast_Store/Views/Shop/Checkout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/Checkout.cshtml
@@ -123,7 +123,7 @@
                                 </div>*@
                                 <div class="col-lg-12 col-md-12">
                                     <div class="billing-info mb-25">
-                                        <label asp-for="ShippmentAddress.ZipPostalCode">ZIP код <abbr class="required" title="required">*</abbr></label>
+                                        <label asp-for="ShippmentAddress.ZipPostalCode">Индекс<abbr class="required" title="required"> *</abbr></label>
                                         <input asp-for="ShippmentAddress.ZipPostalCode">
                                         <span asp-validation-for="ShippmentAddress.ZipPostalCode" class="text-danger"></span>
                                     </div>
