--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/SidebarCart/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/SidebarCart/Default.cshtml
@@ -1,42 +1,35 @@
 ﻿<!-- mini cart start -->
-        <div class="sidebar-cart-active">
-            <div class="sidebar-cart-all">
-                <a class="cart-close" href="#"><i class="dlicon ui-1_simple-remove"></i></a>
-                <div class="cart-content">
-                    <h3>Shopping Cart</h3>
-                    <ul>
-                        <li class="single-product-cart">
-                            <div class="cart-img">
-                                <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
-                            </div>
-                            <div class="cart-title">
-                                <h4><a href="#">Bejewelled velvet sandals</a></h4>
-                                <span> 1 × $49.00	</span>
-                            </div>
-                            <div class="cart-delete">
-                                <a href="#">×</a>
-                            </div>
-                        </li>
-                        <li class="single-product-cart">
-                            <div class="cart-img">
-                                <a href="#"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
-                            </div>
-                            <div class="cart-title">
-                                <h4><a href="#">Contrast faux fur jacket</a></h4>
-                                <span> 1 × $49.00	</span>
-                            </div>
-                            <div class="cart-delete">
-                                <a href="#">×</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="cart-total">
-                        <h4>Subtotal: <span>$170.00</span></h4>
+<div class="sidebar-cart-active">
+    <div class="sidebar-cart-all">
+        <button hidden id="updateCartBtn" @@click="getCart"></button>
+        <a class="cart-close" href="#"><i class="dlicon ui-1_simple-remove"></i></a>
+        <div class="cart-content" id="sidebarCart">
+            <h3>Shopping Cart</h3>
+            <ul>
+                <li v-for="(cartProduct, index) in cartProducts">
+                    <div class="cart-img">
+                        @* <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>*@
                     </div>
-                    <div class="cart-checkout-btn">
-                        <a class="btn-hover cart-btn-style" asp-action="Cart" asp-controller="Shop">Корзина</a>
-                        <a class="no-mrg btn-hover cart-btn-style" asp-action="Checkout" asp-controller="Shop">Оформить заказ</a>
+                    <div class="cart-title">
+                        <h4><a href="#">{{cartProduct.productName}}</a></h4>
+                        <span> {{formatPriceWithAmount(cartProduct)}}	</span>
                     </div>
-                </div>
+                    <div class="cart-delete">
+                        <a href="#" @@click="deleteProductFromCart(cartProduct, index)">×</a>
+                    </div>
+                </li>
+            </ul>
+            <div class="cart-total">
+                <h4>Итоговая цена: <span>{{endPriceComputed}}</span></h4>
+            </div>
+            <div class="cart-checkout-btn">
+                <a class="btn-hover cart-btn-style" asp-action="Cart" asp-controller="Shop">Корзина</a>
+                <a class="no-mrg btn-hover cart-btn-style" asp-action="Checkout" asp-controller="Shop">Оформить заказ</a>
             </div>
         </div>
+    </div>
+</div>
+
+<script src="~/lib/vue/vue.global.js"></script>
+<script src="~/lib/axios/axios.min.js"></script>
+<script type="module" src="~/js/shop/sidebarCart.js"></script>
